[package]
name = "iden"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["derive"] }
oneshot = "0.1.8"
open = "5.3.0"
prettytable = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3.7"
